to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the unofficial "swig1.3" Debian
package that is available from:
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian

Eventually this branch will be merged back to the trunk of the CVS
tree (maybe).

Version 1.3.12 (In Progress)
============================
05/08/2002: beazley
            %ignore behaves better with constructors, destructors, and the
            type system in general.   For constructors and destructors,
            %ignore now suppresses the creation of a default constructor
            or destructor.  For example:

                 %ignore ~Foo;
                 class Foo {
                 public:
                     Foo();
                    ~Foo();
                     ...
                 };

            In SWIG-1.3.11, ~Foo() simply "disappeared" and the code generator
            created a wrapper for a default destructor (as if it was never
            declared in the interface).  In SWIG-1.3.12, %ignore suppresses
            the creation of a destructor if one is actually defined. 

            Similarly, even though a declaration is ignored, information
            may still be needed to properly handle types. For example, here
            is a very subtle error that is fixed by this change:

                %ignore std::string;         // Prevent class wrapping
                namespace std {
                   class string {
                        ...
                   };
                   %typemap(in) string * {
                        ...
                   }
                }
                
                void foo(std::string *s);   // Broken.

            Before this fix, %ignore would cause the class definition to disappear.
            This, in turn, would cause the typemap to be misapplied. 
 
05/08/2002: beazley
            Minor changes to %rename, %ignore, %feature, and related directives